# ICGAA

algorithm/ConvexHull2D/: CMakeLists.txt
algorithm/ConvexHull2D/src/: CMakeLists.txt  ConvexHull.cpp  ConvexHull.h  main.cpp
markdown/: EssentialNotion.md  TreasureDetection.md
